tests/NormalTests/paczka1/small_fuzzy/32778576.err
Error in line 13: niDZ S823 1"7,2
Error in line 8: RGIEQYhP A198 68,4
Error in line 14: RGIEQYhP A282 47,8
